--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
-table {
-    border: 2px solid black;
+#top {
+    font-size: 36px;
 }
 
-th, td {
-    border: 1px solid black;
+#middle {
+    font-size: 24px;
+}
+
+#bottom {
+    font-size: 12px;
+}
+
+.name {
+    font-weight: bold;
 }
